# solidity

./: CMakeLists.txt
.github/: CODEOWNERS
cmake/: EthCompilerSettings.cmake
cmake/scripts/: buildinfo.cmake
libevmasm/: Assembly.cpp  Assembly.h  Instruction.cpp  Instruction.h  JumpdestRemover.cpp  PeepholeOptimiser.cpp  SemanticInformation.cpp
libsolidity/analysis/: GlobalContext.cpp
libsolidity/ast/: TypeProvider.cpp  TypeProvider.h  Types.cpp  Types.h
libsolidity/codegen/: Compiler.h  CompilerContext.cpp  CompilerContext.h  ContractCompiler.cpp  ExpressionCompiler.cpp
libsolidity/interface/: CompilerStack.cpp  OptimiserSettings.h  Version.cpp
libsolidity/parsing/: Parser.cpp
libyul/backends/evm/: AbstractAssembly.h  AsmCodeGen.cpp  AsmCodeGen.h  EVMAssembly.cpp  EVMAssembly.h  EVMDialect.cpp  NoOutputAssembly.cpp  NoOutputAssembly.h  replacement_notes.md
libyul/optimiser/: ASTWalker.cpp  OptimizerUtilities.cpp  Suite.cpp
scripts/: build_emscripten.sh
scripts/travis-emscripten/: publish_binary.sh
solc/: CMakeLists.txt  CommandLineInterface.cpp
